--- a/8WeekLearning/week1/css/week1_resume.css
+++ b/8WeekLearning/week1/css/week1_resume.css
@@ -48,23 +48,16 @@ table {
 	border-spacing: 0;
 }
 
-/* .wrap{
-	width: 1200px;
-    margin: auto;
-	border: 1px solid pink;
+img{
+	display: block;
 }
-
-
-.resume-name{
-
-} */
 
 .wrap{
-    width: 65%;
-    margin: auto;    
+    width: 1200px;
+    margin: 0 auto;    
 }
 
-.resume-name{
+.wrap h1{
     font-size: 80px;
     line-height: 1.2;
     border-bottom: 2px solid #000;
@@ -75,59 +68,77 @@ table {
 	margin: 48px 0;
 }
 
-.resume-title h2{
+.resume-title{
 	font-size: 32px;
 	line-height: 1.4;
 	font-weight: bold;
 	border-bottom: 2px solid #000;
 	margin-bottom: 8px;
+	display: flex;
+	align-items: center;
 }
 
-.resume-title h2 span{
+.resume-title span{
 	font-size: 24px;
-	line-height: 1.3;
+	line-height: 1.2;
+	margin-left: 16px;
 	color: #A00404;
 }
 
-.resume-title p{
+.profile-list{
 	font-size: 24px;
 	line-height: 1.5;
+	font-weight: bold;
+}
+
+.profile-list li:nth-of-type(4){
+	margin-top: 24px;
+}
+
+.profile-list li:last-of-type{
 	margin-bottom: 72px;
 }
 
-.resume-title p:first-of-type{
+.education-list{
+	font-size: 24px;
+	line-height: 1.4;
+	font-weight: bold;
+}
+
+.education-list li:first-of-type{
 	margin-top: 16px;
 	margin-bottom: 24px;
 }
 
-.body-part{
+.education-list li:last-of-type{
+	margin-bottom: 72px;
+}
+
+.skills{
+	width: 1200px;
 	background: #415165;
 	color: white;
 	padding-top: 24px;
 	padding-bottom: 36px;	
-}
-
-.body-part-inner{
-	width: 65%;
-	margin: auto;
+	margin: 0 auto;
+	margin-bottom: 72px;	
 	display: flex;
 	flex-direction: column;
-	align-items: flex-end;
+	align-items: center;
 }
 
-.body-part-inner ul{
-	width: 57%;
+.skills ul{
 	border-left: 1px solid #fff;
 	font-size: 24px;
 	padding-left: 24px;
 }
 
-.body-part-inner ul li{
+.skills ul li{
 	margin-bottom: 16px;
 }
 
-.body-part h2{
-	width: 100%;
+.skills h2{
+	width: 996px;
 	font-size: 32px;
 	font-weight: bold;
 	text-align: center;
@@ -136,84 +147,82 @@ table {
 	border-bottom: 2px solid #fff;
 }
 
-.body-part h2 span{
+.skills h2 span{
 	font-size: 24px;
 }
 
-.resume-experience{
-	margin-bottom: 72px;
-}
-
-.resume-experience h2{
-	font-size: 32px;
-	line-height: 1.4;
+.experience-list li{
 	font-weight: bold;
-	border-bottom: 2px solid #000;
-	margin-top: 79px;
-	margin-bottom: 8px;
-}
-
-.resume-experience h2 span{
-	font-size: 24px;
-	line-height: 1.3;
-	color: #A00404;
-}
-
-.experience-inner{
-	border-left: 1px solid #96A9C4;
-	margin-left: 24px;
-	padding-left: 24px;
-}
-
-.experience-inner p{
-	font-size: 24px;
+	margin-bottom: 32px;
 	line-height: 1.5;
-	margin-bottom: 24px;
 }
 
-.experience-inner p:first-of-type{
-	width: 65%;
+.experience-list li h3{
+	font-size: 24px;
 }
 
-.experience-inner p:first-of-type{
-	margin-top: 16px;
-}
-
-.experience-inner p span{
+.experience-list li p{
 	font-size: 20px;
 }
 
+.experience-list li:first-of-type p{
+	width: 642px;
+}
+
 .footer{
-	width: 65%;
-	margin: auto;
 	text-align: center;
+	margin-top: 72px;
+	padding-top: 24px;
+	padding-bottom: 48px;
+	background: #415165;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .footer h2{
-	width: 100%;
+	width: 1200px;
 	font-size: 32px;
+	line-height: 1.4;
 	font-weight: bold;	
 	padding-bottom: 8px;
-	margin-bottom: 37px;
+	margin-bottom: 16px;
 	border-bottom: 2px solid #fff;
 }
 
 .footer h2 span{
 	font-size: 24px;
-}
-
-.footer ul{
-	font-size: 24px;
+	line-height: 1.2;
 }
 
 .footer ul li{
+	font-size: 24px;
+	line-height: 1.4;
 	margin-top: 16px;
 }
 
-.footer-img{
-	margin-top: 16px;
+.footer li a{
+	text-decoration: none;
+	color: white;
 }
 
-.footer-img img{
-	margin-left: 24px;
+.footer li a:hover{
+	color: blue;
 }
+
+.contact-icon{
+	width: 192px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.contact-icon li a img{
+	margin-top: 20px;
+}
+
+.contact-icon li a img:hover{
+	width: 60px;
+	height: 60px;
+}
+
